/*
 * Copyright (C) 2019 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.android.car.connecteddevice.proto;

option java_package = "com.android.car.connecteddevice.BleStreamProtos";
option java_outer_classname = "VersionExchangeProto";

message BleVersionExchange {
  // Minimum supported protobuf version.
  int32 minSupportedMessagingVersion = 1;

  // Maximum supported protobuf version.
  int32 maxSupportedMessagingVersion = 2;

  // Minimum supported version of the encryption engine.
  int32 minSupportedSecurityVersion = 3;

  // Maximum supported version of the encryption engine.
  int32 maxSupportedSecurityVersion = 4;
}
